Bug 444128 - Shift + Delete doesn't work on the desktop
Summary: Shift + Delete doesn't work on the desktop
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Desktop icons & Folder View widget (other bugs)
Version First Reported In: 5.23.0
Platform: Other Linux
: HI normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-10-20 16:31 UTC by NIk
Modified: 2021-10-21 19:54 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description NIk 2021-10-20 16:31:09 UTC
SUMMARY
Shift + Delete doesn't work on the desktop

STEPS TO REPRODUCE
1. Create a file on the desktop
2. Mark it, press RShift + Delete
3. 

OBSERVED RESULT
File doesn't get deleted

EXPECTED RESULT
File should be deleted

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Opensuse Tumbleweed 20211016
(available in About System)
KDE Plasma Version: 5.23.0
KDE Frameworks Version: 5.86.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
The shortcut works in Dolphin, it only does not on the desktop. The appropriate setting in system settings -> Shortcuts -> File is set.
Comment 1 Nate Graham 2021-10-21 17:06:10 UTC
Can reproduce, and not fixed by any of the fixes for Bug 442765 or Bug 443512.
Comment 2 Bug Janitor Service 2021-10-21 18:34:33 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/626
Comment 3 Alexander Lohnau 2021-10-21 19:49:30 UTC
Git commit 2a7c1c7394ba3bbf6e4da2c1aa06109faafaa343 by Alexander Lohnau.
Committed on 21/10/2021 at 18:33.
Pushed by ngraham into branch 'master'.

Remove defunct check for proxyAction in foldermodel

If we press the shortcut directly on the desktop the proxy action is still the del action,
because the context menu was not opened and the selection did not change after we pressed shift.

If we have the context menu open the proxyAction is properly updated.

TestPlan:
Pressing delete with selected fle opens "Move to trash" dialog
Pressing shift+delete with selected file opens "Delete Permanently" dialog

Same with the context menu open.

M  +0    -8    containments/desktop/plugins/folder/foldermodel.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/2a7c1c7394ba3bbf6e4da2c1aa06109faafaa343
Comment 4 Nate Graham 2021-10-21 19:51:43 UTC
Git commit b0831510de0af7c50e0f73da60312261eab36359 by Nate Graham, on behalf of Alexander Lohnau.
Committed on 21/10/2021 at 19:51.
Pushed by ngraham into branch 'Plasma/5.23'.

Remove defunct check for proxyAction in foldermodel

If we press the shortcut directly on the desktop the proxy action is still the del action,
because the context menu was not opened and the selection did not change after we pressed shift.

If we have the context menu open the proxyAction is properly updated.

TestPlan:
Pressing delete with selected fle opens "Move to trash" dialog
Pressing shift+delete with selected file opens "Delete Permanently" dialog

Same with the context menu open.


(cherry picked from commit 2a7c1c7394ba3bbf6e4da2c1aa06109faafaa343)

M  +0    -8    containments/desktop/plugins/folder/foldermodel.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/b0831510de0af7c50e0f73da60312261eab36359