Remove defunct check for proxyAction in foldermodel

If we press the shortcut directly on the desktop the proxy action is still the del action,
because the context menu was not opened and the selection did not change after we pressed shift.

If we have the context menu open the proxyAction is properly updated.

TestPlan:
Pressing delete with selected fle opens "Move to trash" dialog
Pressing shift+delete with selected file opens "Delete Permanently" dialog

Same with the context menu open.

BUG: 444128


(cherry picked from commit 2a7c1c7394ba3bbf6e4da2c1aa06109faafaa343)